--- a/DoublePendulumExample.ipynb
+++ b/DoublePendulumExample.ipynb
@@ -2,7 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "%matplotlib qt "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
@@ -98,13 +109,14 @@
     "\n",
     "ani = animation.FuncAnimation(fig, animate, np.arange(1, len(y)),\n",
     "    interval=25, blit=False, init_func=init)\n",
-    "ani.save('double_pendulum.mp4', fps=20, bitrate=5000, codec=\"libx264\")\n",
+    "ani.save('double_pendulum.mp4', fps=20, bitrate=5000, codec=\"h264\")\n",
+    "\n",
     "plt.show()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
@@ -120,7 +132,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -140,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -159,10 +171,10 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.YouTubeVideo at 0x1213ce610>"
+       "<IPython.lib.display.YouTubeVideo at 0x124903f90>"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
