FFTpractice giving me symbolic fourier series for gaussian

--- a/ProblemDescription.ipynb
+++ b/ProblemDescription.ipynb
@@ -112,11 +112,48 @@
     "- closed under scaling\n",
     "- closed under multiplication\n",
     "\n",
+    "Ani says we can only have up to 12 or 13 basis functions if we're going to use SOS.\n",
+    "\n",
+    "Research question: can we do distributed SOS?  Hard to parallelize? ...\n",
+    "\n",
+    "\n",
+    "**Periodic over 2$\\pi$**\n",
+    "\n",
+    "It is possible that we won't need functions that are periodic over the unit circle.  It's possible that although the ODE approximation to the PDE will leak out of the unit circle, it might be slow enough that we don't care.  Could try just regular Gaussian radial basis functions.\n",
+    "\n",
+    "But perhaps better to have a function that is indeed periodic over the unit circle, so that if we do a 360 degree turn, we end up with the same parameterization of obstacles in front of us.\n",
+    "\n",
+    "What I think we want is to have functions that have a uni-modal, tunably sharp peak over the unit circle.  We basically want Gaussian radial basis functions, but ones that are periodic with period $2\\pi$.\n",
+    "\n",
+    "How can we get those functions?\n",
+    "\n",
+    "Do a Fourier transform over the Gaussian radial basis function over $[0,2\\pi]$.  Pick some number of terms for this basis function.  Although there are multiple terms, their relative weighting stays the same.  Only the weighting of the entire basis function becomes an element in $\\mathbf{c}$\n",
+    "\n",
+    "\n",
+    "\n",
     "### Image space vs. 2D\n",
     "\n",
     "What is nice about thinking in image space is that we just define distances to obstacles as a function of one variable.\n",
     "\n",
-    "If we think in 2D, then it is more similar to the signed distance function representation."
+    "If we think in 2D, then it is more similar to the signed distance function representation.\n",
+    "\n",
+    "### Controller synthesis\n",
+    "\n",
+    "Want to maximize some property of $\\mathbf{c} \\in \\mathbb{R}^n$ (where $n = $ # of basis functions) that corresponds to the size of the safety-verified set of conditions $\\mathbf{c}_{t=0}$.\n",
+    "\n",
+    "The easiest is to imagine a linear combination:\n",
+    "\n",
+    "$$u=\\mathbf{K} \\cdot \\mathbf{c} $$.  \n",
+    "\n",
+    "Where $\\mathbf{K}^{1 \\times n}, \\mathbf{c}^{n \\times 1}$. We can either hand-design $K$ or we can search for a $K$ that maximizes the safety-verified set over $\\mathbf{c}$.\n",
+    "\n",
+    "There are a few different ideas of what property to maximize.\n",
+    "\n",
+    "1. Maximize volume.  For this, we may need to bound $\\mathbf{c}_{t=0}$ as $\\{\\mathbf{c}_{t=0} \\in [0, S_{max}] \\subset \\mathbb{R}^n\\}$ (Ani says not known how to do with SOS).\n",
+    "2. Maximize the minimum $c_min$.  For this, we may want to choose only a subset $c_{i:j}$ where $i,...,j$ represent the coefficients of the basis functions in the middle in front of us, only the ones that we care about not hitting. (Ani says may be possible with SOS).\n",
+    "3. Maximize some sphere around a point in $R^n$. May again only want to think about $R^k$ where $k = j - i$. (Ani says can do with SOS).\n",
+    "\n",
+    "Each element of $\\mathbf{K}$ would be a decision variable our optimization. "
    ]
   },
   {
@@ -131,11 +168,7 @@
     "\n",
     "Where $s(\\theta,t)$ is the distance to an obstacle at time $t$ and angle $\\theta$, and $\\dot{\\psi}$ is the rate of rotation of the vehicle.  If we assume that we can directly control the rate of change, then $u = \\dot{\\psi}$ and we have:\n",
     "\n",
-    "$$ \\frac{\\partial}{\\partial t} s = \\frac{\\partial}{\\partial \\theta} u $$\n",
-    "\n",
-    "Which simplifies to what we would expect if we can directly change our yaw rate:\n",
-    "\n",
-    "$$ \\frac{\\partial}{\\partial t} \\theta = \\dot{\\psi} $$"
+    "$$ \\frac{\\partial s}{\\partial t} = \\frac{\\partial s}{\\partial \\theta} u $$\n"
    ]
   },
   {
@@ -150,7 +183,15 @@
     "\n",
     "- How do we define what is an obstacle, in terms of $\\mathbf{c}$?\n",
     "\n",
-    "- How do we synthesize a controller?"
+    "- How do we synthesize a controller?\n",
+    "\n",
+    "- Look up Galerkin approximation?  Turn a PDE into an ODE of basis function coefficients?\n",
+    "\n",
+    "\n",
+    "**Ani's recommendations to implement**\n",
+    "\n",
+    "- See if the ODE approximation to the PDE actually works well.  Should be able to integrate forward my ODE, and also just simulate my dynamics in the specific implementation of some world, and see how well they match.  Integrate forward with n=10 basis functions.\n",
+    "- Pick some small ball, make sure can verify with some hand-designed controllers.  Start with 2 basis functions.\n"
    ]
   },
   {
@@ -231,7 +272,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.10"
+   "version": "2.7.6"
   }
  },
  "nbformat": 4,
