updates to problem description

--- a/ProblemDescription.ipynb
+++ b/ProblemDescription.ipynb
@@ -6,11 +6,15 @@
    "source": [
     "We are interested in formulating output feedback controllers that use the dynamics of implicit surface representations to find control inputs.  We'd like to be able to verify these controllers via the safety verification method (or something close to that) described in Barry, Majumdar, Tedrake *(2012)*.\n",
     "\n",
-    "Consider a known function $s$ which maps from $[-\\frac{\\theta_{FOV}}{2},\\frac{\\theta_{FOV}}{2}]$ to the distance of a UAV, where $S_{max}$ is the moving maximum sensing horizon of the sensor.\n",
+    "Consider a known function $s$ which maps from $[-\\frac{\\theta_{FOV}}{2},\\frac{\\theta_{FOV}}{2}]$ to the raycasted distance to an obstacle, where $S_{max}$ is the moving maximum sensing horizon of the sensor.\n",
     "\n",
     "$$s: [-\\frac{\\theta_{FOV}}{2},\\frac{\\theta_{FOV}}{2}] \\rightarrow [0,S_{max}] $$\n",
     "\n",
-    "We like $s$ as a continous function since then we avoid having a hybrid system.  (What do we call a non-hybrid system?)"
+    "We like $s$ as a continous function since then we don't need to consider a hybrid system.\n",
+    "\n",
+    "As a special case, we first focus on a sensor that has a 360 degree field of view (FOV), and we can later consider the problem of having obstacles move in and out of sensor FOV:\n",
+    "\n",
+    "$$s: [-\\pi,\\pi] \\rightarrow [0,S_{max}] $$"
    ]
   },
   {
@@ -26,7 +30,7 @@
    "source": [
     "What we need to find is a geometric PDE somewhat of the form:\n",
     "\n",
-    "$$ \\frac{\\partial}{\\partial t}  s(\\theta)  = f(s,\\psi, u(s))$$\n",
+    "$$ \\frac{\\partial}{\\partial t}  s(\\theta)  = f(s,\\dot{\\psi}, u(s))$$\n",
     "\n"
    ]
   },
@@ -34,7 +38,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Where $\\psi$ is the yaw of the UAV and $u$ is some control input.  The $f$ will contain partial derivatives and may be thought of as an operator. that may be calculated via a reactive controller, for example of the form:\n",
+    "Where $\\psi$ is the yaw of the UAV and $u$ is some control input.  The $f$ will contain partial derivatives and may be thought of as an operator. The control input $u$ may be calculated via a reactive controller, for example of the form:\n",
     "\n",
     "$$ u = k_1\\int w_1(\\theta)s(\\theta)d\\theta + k_2\\int w_s(\\theta)s(\\theta)d\\theta$$"
    ]
@@ -43,9 +47,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We need to use a finite dimensional space to approximate the function $s$.\n",
+    "What we would really like to do is, given a finite dimensional approximation of all possible obstacle environments, be able to search for the optimal output feedback controller that applies to all possible environments.\n",
     "\n",
-    "Given some vector of basis functions $\\mathbf{w}$ (maybe polynomial basis?) and vector of weights $\\mathbf{c}$ we can approximate $s$ as:\n",
+    "Hence we need to use a finite dimensional space to approximate the function $s$.\n",
+    "\n",
+    "Given some vector of basis functions $\\mathbf{w}$ and vector of weights $\\mathbf{c}$ we can approximate $s$ as:\n",
     "\n",
     "$$ s(\\theta) \\approx c_1w_1(\\theta) + c_2w_2(\\theta) + ... + c_Nw_n(\\theta) $$\n",
     "\n",
@@ -53,7 +59,7 @@
     "\n",
     "$$ \\frac{\\partial}{\\partial t} s(\\theta) \\approx \\dot{c}_1w_1(\\theta) + \\dot{c}_2w_2(\\theta) + ... + \\dot{c}_Nw_N(\\theta) $$\n",
     "\n",
-    "$$ \\approx f(\\psi, u(s))$$"
+    "$$ \\approx f(\\dot{\\psi}, u(s))$$"
    ]
   },
   {
@@ -79,23 +85,21 @@
    "source": [
     "### Assumptions of the environment\n",
     "\n",
-    "Will always assume that there is an obstacle wherever we cannot see.\n",
+    "Will always assume that there is an obstacle ($s=0$) wherever we cannot see.\n",
     "\n",
-    "Can also assume that there are obstacles immediately beyond our maximum sensor distance.\n",
+    "Can also assume that there are obstacles immediately beyond our maximum sensor distance ($s=S_{max}$).\n",
     "\n",
     "### Memory of environment\n",
     "\n",
     "We would like to be able to deal with the issue of seeing something, then turning away from it, but being able to remember it was there.  \n",
     "\n",
-    "One way to be able to do this is to have our basis functions defined over the entire domain $[0,2\\pi]$.  This generalizes easily to when we have sensors that can see a full 360 degrees. For sensors with limited FOVs, we should make sure our basis functions decay rapidly near the edges.\n",
-    "\n",
-    "It is possible that we may naturally impose *memory leakage* if our basis functions cause information outside of our FOV to be naturaly drawn down farther.  One option would be to regularize basis functions outside of the FOV.\n",
+    "One way to be able to do this is to have our basis functions defined over the entire domain $[0,2\\pi]$.  This generalizes easily to when we have sensors that can see a full 360 degrees. For sensors with limited FOVs, we could make our basis functions decay near the edges.  It is possible that we may naturally impose *memory leakage* if our basis functions cause information outside of our FOV to be naturaly drawn down farther.  One option would be to regularize basis functions outside of the FOV.\n",
     "\n",
     "### Choice of basis functions\n",
     "\n",
-    "A polynomial basis would naturally lead to SOS.  It may be unclear, however, to know how to stay away from the weights $\\textbf{c}$ of polynomial bases.  (It is not clear how each $c_i$ should indicate where obstacles are).\n",
+    "A polynomial basis would naturally lead to SOS verification.  It might not be easy, however, to know how to \"stay away\" from the weights $\\textbf{c}$ of polynomial bases.  (It is not clear how each $c_i$ should indicate where obstacles are).\n",
     "\n",
-    "An easy choice of basis functions would be step functions, but then we would worry about hybrid dynamics.\n",
+    "An easy choice of basis functions would be preiodic (over $2\\pi$) step functions, but then we would worry about hybrid dynamics.\n",
     "\n",
     "A similar choice but one the preserves continuity is radial basis functions.  Gaussian radial basis functions seem to be a fine choice.  Ani thinks we can still do SOS with linear combinations of Gaussians.\n",
     "\n",
@@ -114,7 +118,7 @@
     "\n",
     "Ani says we can only have up to 12 or 13 basis functions if we're going to use SOS.\n",
     "\n",
-    "Research question: can we do distributed SOS?  Hard to parallelize? ...\n",
+    "To look into later: SOS beyond 12/13\n",
     "\n",
     "\n",
     "**Periodic over 2$\\pi$**\n",
@@ -127,7 +131,7 @@
     "\n",
     "How can we get those functions?\n",
     "\n",
-    "Do a Fourier transform over the Gaussian radial basis function over $[0,2\\pi]$.  Pick some number of terms for this basis function.  Although there are multiple terms, their relative weighting stays the same.  Only the weighting of the entire basis function becomes an element in $\\mathbf{c}$\n",
+    "Am trying a Fourier series approximation of Gaussian radial basis function over $[0,2\\pi]$.  A trick is that it is better to use a linear combination of three Gaussians separated by $2\\pi$, so then the periodicity is naturally imposed.  Need to pick the degree of the Fourier series approximation, and this fit is dependent on the sharpness (variance) of the chosen Gaussians.  Note that in this Fourier formulation, there are two \"layers\" of weights.  For each basis function, there are the Fourier weights (numbering $2M$, where $M$ is the degree of the approximation) and this is collectively considered a basis function.... are two eighting of the entire basis function becomes an element in $\\mathbf{c}$\n",
     "\n",
     "\n",
     "\n",
@@ -272,7 +276,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.10"
+   "version": "2.7.6"
   }
  },
  "nbformat": 4,
