basic plane moving around in world

--- a/ProblemDescription.ipynb
+++ b/ProblemDescription.ipynb
@@ -30,8 +30,11 @@
    "source": [
     "What we need to find is a geometric PDE somewhat of the form:\n",
     "\n",
-    "$$ \\frac{\\partial}{\\partial t}  s(\\theta)  = f(s,\\dot{\\psi}, u(s))$$\n",
-    "\n"
+    "$$ \\frac{\\partial}{\\partial t}  s(\\theta)  = f(s,\\psi, \\dot{\\psi})$$\n",
+    "\n",
+    "And in our Dubin's car model (assume constant linear velocity too) we can directly control $\\dot{\\psi} = u$ and would like to do so as a function of $s$ only.  ($u=u(s)$):\n",
+    "\n",
+    "$$ \\frac{\\partial}{\\partial t}  s(\\theta)  = f(s,\\psi, u(s))$$"
    ]
   },
   {
@@ -59,13 +62,19 @@
     "\n",
     "$$ \\frac{\\partial}{\\partial t} s(\\theta) \\approx \\dot{c}_1w_1(\\theta) + \\dot{c}_2w_2(\\theta) + ... + \\dot{c}_Nw_N(\\theta) $$\n",
     "\n",
-    "$$ \\approx f(\\dot{\\psi}, u(s))$$"
+    "$$ \\approx f(s,\\psi, \\dot{\\psi})$$"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Let us define that:\n",
+    "\n",
+    "$$ s_{approx}(\\theta) = c_1w_1(\\theta) + c_2w_2(\\theta) + ... + c_Nw_n(\\theta) $$\n",
+    "\n",
+    "$$ \\frac{\\partial}{\\partial t} s_{approx}(\\theta) = \\dot{c}_1w_1(\\theta) + \\dot{c}_2w_2(\\theta) + ... + \\dot{c}_Nw_N(\\theta) $$\n",
+    "\n",
     "We can now instead think of $f$ as a vector $\\mathbf{f}$ which is a function $\\mathbf{f}(c_0,c_1,...,c_N,\\theta,\\dot{\\psi)}$, and whose elements are $f_1, f_2, ..., f_N$.  Also write $\\mathbf{c}$ as the vector $\\mathbf{c} = (c_1,c_2,...,c_N)$.  \n",
     "\n",
     "We now have an ODE for the weights:\n",
@@ -77,6 +86,19 @@
     "        f_N(\\mathbf{c}, \\dot{\\psi}) \\\\\n",
     "        \\end{pmatrix} $$\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "How to determine each $f_i$?\n",
+    "\n",
+    "Here's what I'm thinking:\n",
+    "\n",
+    "- What we want to know is just whether each weight, $c_i$, is increasing or decreasing and at what rate.  $c_i$ is just a scalar weight, all it can do is go up or down\n",
+    "\n",
+    "- Clearly the derivative of $c_i$ needs to depend on what all the other weights $c_1,...,c_n$ are, since as we rotate, the regions that used to belong to $c_i$ will move other to the regions of other basis functions\n"
    ]
   },
   {
@@ -195,7 +217,12 @@
     "**Ani's recommendations to implement**\n",
     "\n",
     "- See if the ODE approximation to the PDE actually works well.  Should be able to integrate forward my ODE, and also just simulate my dynamics in the specific implementation of some world, and see how well they match.  Integrate forward with n=10 basis functions.\n",
-    "- Pick some small ball, make sure can verify with some hand-designed controllers.  Start with 2 basis functions.\n"
+    "- Pick some small ball, make sure can verify with some hand-designed controllers.  Start with 2 basis functions.\n",
+    "\n",
+    "**Steps to get there**\n",
+    "\n",
+    "- Need to build a 2D laser range finder on a spinning platform\n",
+    "- Need to simulate the laser range finder, and do raycasting towards obstacle fields\n"
    ]
   },
   {
@@ -285,7 +312,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "version": "2.7.10"
   }
  },
  "nbformat": 4,
