--- a/_RotatingLaserBot/2DLaserScannerRobot.ipynb
+++ b/_RotatingLaserBot/2DLaserScannerRobot.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -117,7 +117,7 @@
     "    return line, time_text\n",
     "\n",
     "ani = animation.FuncAnimation(fig, animate, np.arange(1, len(y)),\n",
-    "    interval=20, blit=True, init_func=init)\n",
+    "    interval=20, blit=False, init_func=init)\n",
     "ani.save('plane.mp4', fps=20, bitrate=5000, codec=\"h264\", writer=writer)\n",
     "plt.show()"
    ]
