moved ObstacleField, Obstacle to library

--- a/_RotatingBot/RotatingBot.ipynb
+++ b/_RotatingBot/RotatingBot.ipynb
@@ -45,7 +45,7 @@
     "    \n",
     "    dqdt[1] = 0 # rotating laser bot can't move\n",
     "\n",
-    "    dqdt[2] = u # constant for now, but later will be u\n",
+    "    dqdt[2] = 0.3 # constant for now, but later will be u\n",
     "\n",
     "    return dqdt\n",
     "\n",
@@ -151,67 +151,33 @@
     "\n",
     "ani = animation.FuncAnimation(fig, animate, np.arange(1, len(y)),\n",
     "    interval=20, blit=False, init_func=init)\n",
-    "ani.save('bot.mp4', fps=20, bitrate=5000, codec=\"h264\", writer=writer)\n",
+    "#ani.save('bot.mp4', fps=20, bitrate=5000, codec=\"h264\", writer=writer)\n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3 4\n",
-      "3 4\n",
-      "Obstacle 1 center:\n",
-      "3 4\n",
-      "Obstacle 2 center:\n",
-      "-3 2\n"
+     "ename": "ImportError",
+     "evalue": "cannot import name ObstacleField",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-3-82b14a19d7e4>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mObstacleLibrary\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mObstacleField\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mObstacle\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mImportError\u001b[0m: cannot import name ObstacleField"
      ]
     }
    ],
    "source": [
-    "class ObstacleField:\n",
-    "\n",
-    "    def __init__(self):\n",
-    "        self.ObstaclesList = []\n",
-    "        \n",
-    "    def addObstacle(self,obstacle):\n",
-    "        self.ObstaclesList.append(obstacle)\n",
-    "    \n",
-    "    def printObstacles(self):\n",
-    "        counter = 1\n",
-    "        for i in self.ObstaclesList:\n",
-    "            print \"Obstacle \" + str(counter) + \" center:\"\n",
-    "            i.printCenter()\n",
-    "            counter += 1\n",
-    "        \n",
-    "\n",
-    "class Obstacle:\n",
-    "    \n",
-    "    def __init__(self,x,y):\n",
-    "        self.centerX = x\n",
-    "        self.centerY = y\n",
-    "        self.radius = 1\n",
-    "        \n",
-    "    def printCenter(self):\n",
-    "        print self.centerX, self.centerY\n",
-    "        \n",
-    "    def plotLists(self):\n",
-    "        \n",
-    "        t = np.linspace(-math.pi,math.pi,100)\n",
-    "        x = self.radius*np.cos(t) + self.centerX\n",
-    "        y = self.radius*np.sin(t) + self.centerY\n",
-    "        return x, y\n",
+    "from ObstacleLibrary import ObstacleField, Obstacle\n",
     "        \n",
     "        \n",
-    "\n",
-    "\n",
     "obs1 = Obstacle(3,4)\n",
     "obs1.printCenter()\n",
     "xlist, ylist = obs1.plotLists()\n",
