--- a/_RotatingBot/RotatingBot.ipynb
+++ b/_RotatingBot/RotatingBot.ipynb
@@ -43,7 +43,7 @@
     "    \n",
     "    dqdt[1] = 0 # rotating laser bot can't move\n",
     "\n",
-    "    dqdt[2] = 0.1 # constant for now, but later will be u\n",
+    "    dqdt[2] = sin(t) # constant for now, but later will be u\n",
     "\n",
     "    return dqdt\n",
     "\n",
@@ -190,7 +190,7 @@
     "\n",
     "ani = animation.FuncAnimation(fig, animate, np.arange(1, len(y)),\n",
     "    interval=20, blit=False, init_func=init)\n",
-    "ani.save('bot.mp4', fps=20, bitrate=5000, codec=\"h264\", writer=writer)\n",
+    "#ani.save('bot.mp4', fps=20, bitrate=5000, codec=\"h264\", writer=writer)\n",
     "plt.show()"
    ]
   },
